src/styles/styles.ContentConfigScreen.module.css
.link-field {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: var(--spacing-m);
    column-gap: var(--spacing-l);
    padding: var(--spacing-l);
    border-radius: 8px;
    background: #f5f5f5;
}
.link-field--col-2{
    grid-template-areas: "col1 col2 col2";
}
.link-field--col-3{
    grid-template-areas: "col1 col2 col3";
}

.link-field > * {
    width: 100%;
    margin: 0;
}
.link-field > *:nth-of-type(1){
    grid-area: col1;
}
.link-field > *:nth-of-type(2){
    grid-area: col2;
}
.link-field > *:nth-of-type(3){
    grid-area: col3;
}

.link-filed__type-styling,
.link-field__link-text,
.link-field__target-column {
    display: flex;
    flex-direction: column;
    gap: var(--spacing-m);
}

.link-filed__type-styling > *,
.link-field__link-text > *,
.link-field__target-column > * {
    margin: 0;
}

.link-field__target-column > * {
    margin-bottom: 4px;
}

.link-field__error {
    color: var(--remove-color);
    font-size: var(--font-size-l);
}
.link-field__target-label {
    margin: 0 0 6px;
    color: var(--light-body-color);
    font-size: var(--font-size-m);
}
.link-field__target-label + * {
    height: 38px;
}

